[gd_scene load_steps=31 format=3 uid="uid://ch3sa0dos81bb"]

[ext_resource type="Texture2D" uid="uid://bfhsnsxv7oa48" path="res://assets/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Hit-Vanish/Hit-Sheet.png" id="1_ckj62"]
[ext_resource type="Script" path="res://src/Enemies/Boar.gd" id="1_edv5f"]
[ext_resource type="Texture2D" uid="uid://bd2012qo6k3u3" path="res://assets/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Idle/Idle-Sheet.png" id="2_evova"]
[ext_resource type="Texture2D" uid="uid://cknjlgeomux0h" path="res://assets/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Run/Run-Sheet.png" id="3_dhjo8"]
[ext_resource type="Texture2D" uid="uid://b80wteiqf5aql" path="res://assets/Legacy-Fantasy - High Forest 2.3/Mob/Boar/Walk/Walk-Base-Sheet.png" id="4_kw4sv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3quuq"]
radius = 12.0
height = 44.0

[sub_resource type="AtlasTexture" id="AtlasTexture_357ka"]
atlas = ExtResource("1_ckj62")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykat7"]
atlas = ExtResource("1_ckj62")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kajc"]
atlas = ExtResource("1_ckj62")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_df8d3"]
atlas = ExtResource("1_ckj62")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80ykq"]
atlas = ExtResource("2_evova")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4cq4"]
atlas = ExtResource("2_evova")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_22lnf"]
atlas = ExtResource("2_evova")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfyi4"]
atlas = ExtResource("2_evova")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v7ea"]
atlas = ExtResource("3_dhjo8")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvif8"]
atlas = ExtResource("3_dhjo8")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkenw"]
atlas = ExtResource("3_dhjo8")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b84e6"]
atlas = ExtResource("3_dhjo8")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmksa"]
atlas = ExtResource("3_dhjo8")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c886x"]
atlas = ExtResource("3_dhjo8")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epiff"]
atlas = ExtResource("4_kw4sv")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_delhf"]
atlas = ExtResource("4_kw4sv")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ubg"]
atlas = ExtResource("4_kw4sv")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmusn"]
atlas = ExtResource("4_kw4sv")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia10x"]
atlas = ExtResource("4_kw4sv")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86lon"]
atlas = ExtResource("4_kw4sv")
region = Rect2(240, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5lmw7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_357ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykat7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kajc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df8d3")
}],
"loop": true,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80ykq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4cq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22lnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfyi4")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v7ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvif8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkenw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b84e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmksa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c886x")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epiff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_delhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ubg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmusn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia10x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86lon")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nneu6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e42ur"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iis7g"]

[node name="Boar" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 8
collision_mask = 23
script = ExtResource("1_edv5f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3quuq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -4)
sprite_frames = SubResource("SpriteFrames_5lmw7")
animation = &"Idle"

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
scale = Vector2(25, 25)
shape = SubResource("CircleShape2D_nneu6")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
scale = Vector2(15, 15)
shape = SubResource("CircleShape2D_e42ur")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
scale = Vector2(2.5, 2.5)
shape = SubResource("CircleShape2D_iis7g")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
